tests/NormalTests/paczka1/small_fuzzy/90938913.err
Error in line 1: ELgEjKDF S186 43,8
Error in line 2: 5dCrr A483 17,6
Error in line 6: Ih2xFzUMG A482 35,8
Error in line 8: KGcgNI0 A482 93,0
